finish mobile layout for skill to display when img is clicked. Added notes to HTML markup for better visibility. Working on tablet layout for skills list

--- a/scss/components/_flexbox.scss
+++ b/scss/components/_flexbox.scss
@@ -25,14 +25,17 @@
   justify-content: space-around;
 }
 
-.contact-links {
+.contact-links,
+.skill-used {
   flex-direction: row;
   justify-content: center;
 }
 
+
 .email,
 .git,
-.facebook {
+.facebook,
+.twitter {
   justify-content: center;
 }
 
