--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ footer .heading-sub-four {
 .main-header img {
   display: block;
   width: 100%;
-  height: 70vh;
+  height: 100vh;
 }
 .main-header .main-name {
   position: absolute;
@@ -585,7 +585,7 @@ section {
 }
 
 .view {
-  visibility: hidden;
+  display: none;
 }
 
 .portfolio-list .mobile-title {
@@ -599,12 +599,18 @@ section {
 
 .skill-used {
   display: none;
-  flex-direction: row;
-  justify-content: center;
   width: 100%;
+  max-height: 0;
+  overflow: hidden;
 }
 .skill-used div {
-  width: 15%;
+  width: 12%;
+}
+.skill-used .skill-one {
+  margin-left: 0;
+}
+.skill-used .skill-two, .skill-used .skill-three {
+  margin-left: 0.5em;
 }
 
 .portfolio-item {
@@ -618,6 +624,7 @@ section {
 .portfolio-item .portfolio-info p {
   font-size: 1rem;
   max-height: 0;
+  margin-top: 0;
   overflow: hidden;
 }
 .portfolio-item img {
@@ -645,10 +652,10 @@ section {
 }
 
 .contact-links {
-  display: inline;
+  display: inline-block;
 }
 .contact-links a {
-  width: 40%;
+  width: 50%;
 }
 .contact-links svg:hover {
   cursor: pointer;
@@ -694,14 +701,16 @@ section {
   justify-content: space-around;
 }
 
-.contact-links {
+.contact-links,
+.skill-used {
   flex-direction: row;
   justify-content: center;
 }
 
 .email,
 .git,
-.facebook {
+.facebook,
+.twitter {
   justify-content: center;
 }
 
@@ -821,6 +830,9 @@ main {
     border-bottom: 1px solid #fff;
   }
 
+  .main-header img {
+    height: 70vh;
+  }
   .main-header .main-name {
     opacity: 0;
   }
@@ -867,7 +879,6 @@ main {
   }
 
   .view {
-    visibility: visible;
     display: flex;
     flex-direction: row;
     margin-left: 3em;
@@ -901,15 +912,6 @@ main {
     cursor: pointer;
   }
 
-  .skill-used div {
-    position: absolute;
-    width: 100px;
-  }
-  .skill-used .skill-two {
-    background-color: #d51406;
-    right: 10%;
-  }
-
   .list {
     border-bottom: none;
     display: flex;
@@ -924,6 +926,7 @@ main {
     margin: 0 3em;
   }
   .list img {
+    position: relative;
     height: 100%;
     max-height: 210px;
     width: 100%;
@@ -942,6 +945,21 @@ main {
     font-size: 1.5rem;
     text-align: center;
     margin-top: 0.5em;
+  }
+  .list .skill-used {
+    display: flex;
+    max-height: 100%;
+    width: 100px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .list .skill-used div {
+    width: 30px;
+  }
+  .list .skill-used:nth-child(2n-5) {
+    align-items: flex-end;
+    background-color: red;
   }
 
   .grid {
