--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -12,7 +12,7 @@
   & img {
     display: block;
     width: 100%;
-    height: 70vh;
+    height: 100vh;
   }
   & .main-name {
     position: absolute;
@@ -175,7 +175,7 @@ section {
   border-bottom: 1px solid #c0c0c0;
 }
 .view {
-  visibility: hidden;
+  display: none;
 }
 .portfolio-list {
   & .mobile-title {
@@ -189,11 +189,17 @@ section {
 }
 .skill-used {
   display: none;
-  flex-direction: row;
-  justify-content: center;
   width: 100%;
+  max-height: 0;
+  overflow: hidden;
   & div {
-    width: 15%;
+    width: 12%;
+  }
+  & .skill-one {
+    margin-left: 0;
+  }
+  & .skill-two, .skill-three {
+    margin-left: .5em;
   }
 }
 .portfolio-item {
@@ -206,6 +212,7 @@ section {
   & .portfolio-info p {
     font-size: 1rem;
     max-height: 0;
+    margin-top: 0;
     overflow: hidden;
   }
   & img {
@@ -234,9 +241,9 @@ section {
 }
 
 .contact-links {
-  display: inline;
+  display: inline-block;
   & a {
-    width: 40%;
+    width: 50%;
   }
   & svg:hover {
     cursor: pointer;
