--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -51,6 +51,9 @@
   }
 
   .main-header {
+    & img {
+      height: 70vh;
+    }
     & .main-name {
       opacity: 0;
     }
@@ -96,7 +99,6 @@
     opacity: .5;
   }
   .view {
-    visibility: visible;
     display: flex;
     flex-direction: row;
     margin-left: 3em;
@@ -130,16 +132,6 @@
   img:hover {
     cursor: pointer;
   }
-  .skill-used {
-    & div {
-      position: absolute;
-      width: 100px;
-    }
-    & .skill-two {
-      background-color: #d51406;
-      right: 10%;
-    }
-  }
   //List view for portfolio
   .list {
     border-bottom: none;
@@ -154,6 +146,7 @@
       margin: 0 3em;
     }
     & img {
+      position: relative;
       height: 100%;
       max-height: 210px;
       width: 100%;
@@ -173,6 +166,26 @@
     text-align: center;
     margin-top: .5em;
     }
+    & .skill-used {
+      display: flex;
+      max-height: 100%;
+      width: 100px;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+    & .skill-used div {
+      width: 30px;
+    }
+    & .skill-used:nth-child(2n-5) {
+      align-items: flex-end;
+      background-color: red;
+    }
+    // & .skill-one,
+    // & .skill-two,
+    // & .skill-three {
+    //   align-content: center;
+    // }
   }
   //Grid view for portfolio
   .grid {
