--- a/css/styles.css
+++ b/css/styles.css
@@ -916,6 +916,7 @@ main {
     border-bottom: none;
     display: flex;
     flex-direction: row;
+    position: relative;
   }
   .list:nth-child(4n-2) {
     flex-direction: row-reverse;
@@ -926,11 +927,14 @@ main {
     margin: 0 3em;
   }
   .list img {
-    position: relative;
     height: 100%;
     max-height: 210px;
     width: 100%;
     max-width: 300px;
+  }
+  .list .parent {
+    position: relative;
+    width: 100%;
   }
   .list img:hover {
     filter: grayscale(0);
@@ -948,17 +952,19 @@ main {
   }
   .list .skill-used {
     display: flex;
+    width: 50px;
+    height: auto;
     max-height: 100%;
-    width: 100px;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-evenly;
   }
   .list .skill-used div {
-    width: 30px;
+    display: inline-block;
+    margin: 0 auto;
+    width: 90%;
   }
-  .list .skill-used:nth-child(2n-5) {
-    align-items: flex-end;
+  .list img:hover div {
     background-color: red;
   }
 
