--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,49 @@ a {
 /*=====================================
         UTILITIES PARTIALS
 ======================================*/
+@keyframes slide-down {
+  0% {
+    height: 0;
+  }
+  30% {
+    opacity: 0;
+    transform: translateY(-60px);
+  }
+  90% {
+    height: auto;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes trace {
+  0% {
+    fill: transparent;
+  }
+  100% {
+    fill: transparent;
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes html-fill {
+  100% {
+    fill: #d51406;
+  }
+}
+@keyframes sass-fill {
+  100% {
+    fill: #e52489;
+  }
+}
 /*=====================================
         COMPONENT PARTIALS
 ======================================*/
@@ -459,22 +502,6 @@ footer .heading-sub-four {
   transform: scale(1.3);
 }
 
-@keyframes slide-down {
-  0% {
-    height: 0;
-  }
-  30% {
-    opacity: 0;
-    transform: translateY(-60px);
-  }
-  90% {
-    height: auto;
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 #about {
   padding-left: 0.5em;
 }
@@ -488,25 +515,6 @@ footer .heading-sub-four {
   cursor: pointer;
 }
 
-@keyframes trace {
-  0% {
-    fill: transparent;
-  }
-  100% {
-    fill: transparent;
-    stroke-dashoffset: 0;
-  }
-}
-@keyframes html-fill {
-  100% {
-    fill: #d51406;
-  }
-}
-@keyframes sass-fill {
-  100% {
-    fill: #e52489;
-  }
-}
 #skills {
   transition: all 0.5s ease-in-out;
 }
@@ -717,7 +725,7 @@ section {
 .modal-container {
   display: none;
   background-color: black;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
   position: fixed;
   z-index: 1;
   left: 0;
@@ -749,8 +757,18 @@ section {
   width: 600px;
   position: relative;
   text-align: center;
-  margin: 15% auto;
+  margin: 10% auto;
   padding: 30px 20px;
+}
+.modal-box img {
+  filter: grayscale(0);
+  max-height: 400px;
+}
+.modal-box .skill-used {
+  display: flex;
+  flex-direction: row;
+  max-height: 100%;
+  margin-top: 0.5rem;
 }
 .modal-box .port-modal-info {
   margin-top: 1.5rem;
@@ -908,10 +926,6 @@ main {
     margin-bottom: 5em;
   }
 
-  img:hover {
-    cursor: pointer;
-  }
-
   .list {
     border-bottom: none;
     display: flex;
@@ -927,6 +941,7 @@ main {
     margin: 0 3em;
   }
   .list img {
+    display: block;
     height: 100%;
     max-height: 210px;
     width: 100%;
@@ -950,22 +965,38 @@ main {
     text-align: center;
     margin-top: 0.5em;
   }
+  .list .img-wrapper {
+    position: relative;
+  }
   .list .skill-used {
+    position: absolute;
+    top: 20%;
     display: flex;
-    width: 50px;
+    width: 100%;
     height: auto;
     max-height: 100%;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
     justify-content: space-evenly;
   }
   .list .skill-used div {
-    display: inline-block;
-    margin: 0 auto;
-    width: 90%;
+    display: inline;
   }
-  .list img:hover div {
-    background-color: red;
+  .list .skill-used > div {
+    width: 100%;
+    display: block;
+    opacity: 0;
+  }
+  .list .img-wrapper:hover img {
+    opacity: 0.5;
+  }
+  .list .img-wrapper:hover .skill-one {
+    animation: fade-in 1s ease-in-out forwards;
+  }
+  .list .img-wrapper:hover .skill-two {
+    animation: fade-in 1s ease-in-out 0.3s forwards;
+  }
+  .list .img-wrapper:hover .skill-three {
+    animation: fade-in 1s ease-in-out 0.7s forwards;
   }
 
   .grid {
@@ -1006,6 +1037,7 @@ main {
   .grid img:hover {
     filter: grayscale(0);
     transition: filter 0.5s ease-in-out;
+    cursor: pointer;
   }
 
   #contact h2 {
