--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -3,7 +3,7 @@
 .modal-container {
   display: none;
   background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.6);
   position: fixed;
   z-index: 1;
   left: 0;
@@ -37,8 +37,18 @@
   width: 600px;
   position: relative;
   text-align: center;
-  margin: 15% auto;
+  margin: 10% auto;
   padding: 30px 20px;
+  & img {
+    filter: grayscale(0);
+    max-height: 400px;
+  }
+  & .skill-used {
+    display: flex;
+    flex-direction: row;
+    max-height: 100%;
+    margin-top: .5rem;
+  }
   & .port-modal-info {
     margin-top: 1.5rem ;
     border-radius: 5px;
