--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -2,3 +2,9 @@
 
 $primary-white: #fff;
 $black: #000;
+$html-color: #d51406;
+$css-color: #2683c8;
+$sass-color: #e52489;
+$js-color: #f5e936;
+$light-grey-border: #c0c0c0;
+$title-color-one: #b5b5b5;
