--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -7,11 +7,10 @@
 .main-header {
   color: $primary-white;
   position: relative;
-  background-color: #000;
+  background-color: $black;
   text-align: center;
   & img {
-    display: block;
-    width: 100%;
+    @include imgBlock100;
     height: 100vh;
   }
   & .main-name {
@@ -47,10 +46,13 @@
 #about {
   padding-left: .5em;
   & .display {
-    border-left: 1px solid #000;
+    @include hidden;
+    border-left: 1px solid $black;
     padding-left: .5em;
-    max-height: 0;
-    overflow: hidden;
+  }
+  & h2 {
+    margin-top: 0;
+    padding-top: .5em;
   }
   & h2:hover {
     cursor: pointer;
@@ -69,11 +71,7 @@
 .html-svg {
   display: inline;
   &:hover .html-logo {
-    font-size: 2.5em;
-    stroke: #d51406;
-    stroke-width: .5;
-    stroke-dasharray: 105;
-    stroke-dashoffset: 105;
+    @include traceSVG(2.5em, $html-color, .5, 105);
     animation: trace 3s linear forwards,
                html-fill .8s 3s forwards;
   }
@@ -83,11 +81,10 @@
   display: inline;
   & .css-logo  {
     transition: transform .5s ease-in-out;
-    transform-origin: 50% 50%;
-    transform-box: fill-box;
+    @include transformBoxCenter;
   }
   &:hover .css-logo {
-    fill: #2683c8;
+    fill: $css-color;
     transform: rotateY(180deg);
   }
 }
@@ -96,11 +93,10 @@
   display: inline;
   & .js-logo {
     transition: transform .5s ease-in-out;
-    transform-origin: 50% 50%;
-    transform-box: fill-box;
+    @include transformBoxCenter;
   }
   &:hover .js-logo {
-    fill: #f5e936;
+    fill: $js-color;
     transform: scale(1.3);
   }
 }
@@ -108,11 +104,7 @@
 .sass-svg {
   display: inline;
   &:hover .sass-logo {
-    font-size: 2.5em;
-    stroke: #e52489;
-    stroke-width: .5;
-    stroke-dasharray: 105;
-    stroke-dashoffset: 105;
+    @include traceSVG (2.5em, $sass-color, .5, 105);
     animation: trace 3s linear forwards,
                sass-fill .8s 3s forwards;
   }
@@ -121,8 +113,7 @@
 .skills {
   text-align: center;
   & .skill {
-    max-height: 0;
-    overflow: hidden;
+    @include hidden;
   }
 }
 
@@ -132,10 +123,19 @@
 }
 
 section {
-  border-bottom: 1px solid #c0c0c0;
+  border-bottom: 1px solid $light-grey-border;
+  &:nth-child(odd) {
+    background-color: #e8e8e8;
+  }
 }
 .view {
   display: none;
+}
+#portfolio {
+  & h2 {
+    margin-top: 0;
+    padding-top: .5em;
+  }
 }
 .portfolio-list {
   & .mobile-title {
@@ -144,14 +144,13 @@ section {
     margin-top: .5em;
   }
   & .tablet-title {
-    visibility: hidden;
+    display: none;
   }
 }
 .skill-used {
+  @include hidden;
   display: none;
   width: 100%;
-  max-height: 0;
-  overflow: hidden;
   & div {
     width: 12%;
   }
@@ -165,7 +164,7 @@ section {
 .portfolio-item {
   margin-top: .5em;
   text-align: center;
-  border-bottom: 1px solid #c0c0c0;
+  border-bottom: 1px solid $light-grey-border;
   &:last-child {
     border-bottom: none;
   }
@@ -184,13 +183,13 @@ section {
   padding-bottom: 3rem;
   & p {
     text-align: center;
-    color: #b5b5b5;
+    color: $title-color-one;
     position: relative;
     font-size: 3em;
     font-style: italic;
   }
   & span {
-    color: #000;
+    color: $black;
     font-size: .75em;
     position: absolute;
     top: 50%;
