--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -3,12 +3,12 @@
 section,
 footer {
   & h2{
-    color: #b5b5b5;
+    color: $title-color-one;
     position: relative;
     font-size: 3em;
   }
   & span {
-    color: #000;
+    color: $black;
     font-size: .75em;
     position: absolute;
     top: 50%;
