added hover effect for main-name to add an animaiton. Added JS to background image of main header for a slow scale, working on creating a more smooth transtion.

--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -14,12 +14,14 @@ footer {
     top: 50%;
   }
   & .heading-sub-one {
+    top: 50px;
     left: 140px;
   }
   & .heading-sub-two {
     left: 110px;
   }
   & .heading-sub-three {
+    top: 45px;
     left: 120px;
   }
   & .heading-sub-four {
