--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,33 @@ a {
     fill: #e52489;
   }
 }
+@keyframes left-slide {
+  10% {
+    transform: translateX(10px);
+  }
+  90% {
+    transform: translateX(-120px);
+  }
+}
+@keyframes right-slide {
+  10% {
+    transform: translateX(-10px);
+  }
+  90% {
+    transform: translateX(120px);
+  }
+}
+@keyframes scale-slow {
+  30% {
+    transform: scale(0.9);
+  }
+  80% {
+    transform: scale(1.1);
+  }
+  90% {
+    transform: scale(1);
+  }
+}
 /*=====================================
         COMPONENT PARTIALS
 ======================================*/
@@ -441,6 +468,7 @@ footer span {
 }
 section .heading-sub-one,
 footer .heading-sub-one {
+  top: 50px;
   left: 140px;
 }
 section .heading-sub-two,
@@ -449,6 +477,7 @@ footer .heading-sub-two {
 }
 section .heading-sub-three,
 footer .heading-sub-three {
+  top: 45px;
   left: 120px;
 }
 section .heading-sub-four,
@@ -861,18 +890,34 @@ main {
     border-bottom: 1px solid #fff;
   }
 
+  .main-header {
+    overflow: hidden;
+  }
   .main-header img {
     height: 70vh;
+    transform-origin: 50% 50%;
+  }
+  .main-header span {
+    display: inline-block;
   }
   .main-header .main-name {
     opacity: 0;
+    transition: all 1s ease-in-out;
   }
   .main-header:hover .main-name {
     opacity: 1;
-    transition: 0.5s ease-in;
   }
   .main-header .main-name:hover {
     cursor: pointer;
+  }
+  .main-header .main-name:hover .name-h1 {
+    animation: scale-slow 1s cubic-bezier(0.42, -0.62, 0.49, 1.56) forwards;
+  }
+  .main-header .main-name:hover span:first-of-type {
+    animation: left-slide 1s cubic-bezier(0.42, -0.62, 0.49, 1.56) forwards;
+  }
+  .main-header .main-name:hover span:last-of-type {
+    animation: right-slide 1s cubic-bezier(0.42, -0.62, 0.49, 1.56) forwards;
   }
 
   section {
@@ -1019,6 +1064,7 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: minmax(150px, auto);
     gap: 40px;
+    padding-bottom: 2em;
   }
   .grid img {
     height: 200px;
@@ -1040,14 +1086,15 @@ main {
     overflow: visible;
   }
   .grid .tablet-title {
-    visibility: visible;
+    display: block;
     font-size: 1.5rem;
     text-align: center;
     margin-top: 0.5em;
   }
   .grid img:hover {
     filter: grayscale(0);
-    transition: filter 0.5s ease-in-out;
+    transform: scale(1.1);
+    transition: all 0.8s ease-in-out;
     cursor: pointer;
   }
 
