--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -50,18 +50,35 @@
   }
 
   .main-header {
+    overflow: hidden;
     & img {
       height: 70vh;
+      transform-origin: 50% 50%;
+    }
+    // & img:hover  {
+    //   transform: scale(1.5);
+    // }
+    & span {
+      display: inline-block;
     }
     & .main-name {
       opacity: 0;
+      transition: all 1s ease-in-out;
     }
     &:hover .main-name {
       opacity: 1;
-      transition: .5s ease-in;
     }
     & .main-name:hover {
       cursor: pointer;
+    }
+    & .main-name:hover .name-h1 { 
+      animation: scale-slow 1s cubic-bezier(.42,-0.62,.49,1.56) forwards;
+    }
+    & .main-name:hover span:first-of-type{
+      animation: left-slide 1s cubic-bezier(.42,-0.62,.49,1.56) forwards;
+    }
+    & .main-name:hover span:last-of-type{
+      animation: right-slide 1s cubic-bezier(.42,-0.62,.49,1.56) forwards;
     }
   }
 section {
@@ -202,6 +219,7 @@ section {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: minmax(150px, auto);
     gap: 40px;
+    padding-bottom: 2em;
     & img {
       height: 200px;
     }
@@ -220,14 +238,15 @@ section {
       @include visible;
     }
     & .tablet-title {
-    visibility: visible;
+    display: block;
     font-size: 1.5rem;
     text-align: center;
     margin-top: .5em;
     }
     & img:hover{
       filter: grayscale(0);
-      transition: filter .5s ease-in-out;
+      transform: scale(1.1);
+      transition: all .8s ease-in-out;
       cursor: pointer;
     }
   }
