--- a/css/styles.css
+++ b/css/styles.css
@@ -494,13 +494,15 @@ footer .heading-sub-four {
 .main-header {
   color: #fff;
   position: relative;
-  background-color: #000;
   text-align: center;
 }
 .main-header img {
   display: block;
   width: 100%;
   height: 100vh;
+}
+.main-header h1 {
+  display: inline-block;
 }
 .main-header .main-name {
   position: absolute;
@@ -533,6 +535,7 @@ footer .heading-sub-four {
 
 #about {
   padding-left: 0.5em;
+  padding-bottom: 1em;
 }
 #about .display {
   overflow: hidden;
@@ -681,7 +684,7 @@ section:nth-child(odd) {
 }
 
 .contact-info {
-  padding-bottom: 3rem;
+  padding-bottom: 3em;
 }
 .contact-info p {
   text-align: center;
@@ -781,7 +784,7 @@ section:nth-child(odd) {
   width: 100%;
   margin: 25% auto;
   text-align: center;
-  font-size: 2em;
+  font-size: 2rem;
   color: #fff;
 }
 .scroll-arrow .scroll-left, .scroll-arrow .scroll-right {
@@ -810,10 +813,12 @@ section:nth-child(odd) {
   flex-direction: row;
   max-height: 100%;
   overflow: visible;
-  margin-top: 0.5rem;
+  margin: 0 auto;
+  width: 70%;
+  margin-top: 0.5em;
 }
 .modal-box .port-modal-info {
-  margin-top: 1.5rem;
+  margin-top: 1.5em;
   border-radius: 5px;
 }
 .modal-box .port-modal-info p {
@@ -910,13 +915,13 @@ main {
   .main-header .main-name:hover {
     cursor: pointer;
   }
-  .main-header .main-name:hover .name-h1 {
+  .main-header h1:hover .name-h1 {
     animation: scale-slow 1s cubic-bezier(0.42, -0.62, 0.49, 1.56) forwards;
   }
-  .main-header .main-name:hover span:first-of-type {
+  .main-header h1:hover span:first-of-type {
     animation: left-slide 1s cubic-bezier(0.42, -0.62, 0.49, 1.56) forwards;
   }
-  .main-header .main-name:hover span:last-of-type {
+  .main-header h1:hover span:last-of-type {
     animation: right-slide 1s cubic-bezier(0.42, -0.62, 0.49, 1.56) forwards;
   }
 
