--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -55,9 +55,6 @@
       height: 70vh;
       transform-origin: 50% 50%;
     }
-    // & img:hover  {
-    //   transform: scale(1.5);
-    // }
     & span {
       display: inline-block;
     }
@@ -71,13 +68,13 @@
     & .main-name:hover {
       cursor: pointer;
     }
-    & .main-name:hover .name-h1 { 
+    & h1:hover .name-h1 { 
       animation: scale-slow 1s cubic-bezier(.42,-0.62,.49,1.56) forwards;
     }
-    & .main-name:hover span:first-of-type{
+    & h1:hover span:first-of-type{
       animation: left-slide 1s cubic-bezier(.42,-0.62,.49,1.56) forwards;
     }
-    & .main-name:hover span:last-of-type{
+    & h1:hover span:last-of-type{
       animation: right-slide 1s cubic-bezier(.42,-0.62,.49,1.56) forwards;
     }
   }
