--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -257,3 +257,17 @@ section {
     }
   }
 }
+
+@media(min-width: 1300px) {
+  #about {
+    grid-column: 1 / span 1;
+    background-color: $primary-white;
+  }
+  #skills {
+    grid-column: 2 / span 1;
+    & h2 {
+      margin-top: 0;
+      padding-top: .5em;
+    }
+  }
+}
