removed section while it is being worked on. Changed nav-bar margin-top to padding-top to see if this will remove height difference in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -512,7 +512,7 @@ footer .heading-sub-four {
   position: absolute;
   top: 50%;
   width: 100%;
-  margin-top: 1em;
+  padding-top: 1em;
 }
 
 .nav-list {
