changed padding on .main-name from margin-top

--- a/css/styles.css
+++ b/css/styles.css
@@ -505,6 +505,7 @@ footer .heading-sub-four {
   display: inline-block;
 }
 .main-header .main-name {
+  display: inline-block;
   position: absolute;
 }
 
